--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -92,6 +92,12 @@ jobs:
         run: |
           git push --follow-tags
 
+      - name: Create GitHub release
+        uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          prerelease: false
+
 #      - name: Generate base.pot
 #        run: pybabel extract -o locale/base.pot pidroidbot_discord/
 #
