--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -106,6 +106,7 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          automatic_release_tag: ${{ github.ref }}
 
 #      - name: Create GitHub release
 #        uses: "marvinpinto/action-automatic-releases@latest"
