--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -102,19 +102,19 @@ jobs:
     needs:
       - build
     steps:
-      - name: Create GitHub release
-        uses: ncipollo/release-action@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ github.ref }}
-
 #      - name: Create GitHub release
-#        uses: "marvinpinto/action-automatic-releases@latest"
+#        uses: ncipollo/release-action@v1
 #        with:
-#          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+#          token: ${{ secrets.GITHUB_TOKEN }}
+#          tag: ${{ github.ref }}
+
+      - name: Create GitHub release
+        uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
 #          tag_name: ${{ github.ref }}
 #          automatic_release_tag: "latest"
-#          prerelease: false
+          prerelease: false
 
 #      - name: Generate base.pot
 #        run: pybabel extract -o locale/base.pot pidroidbot_discord/
