--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -90,8 +90,7 @@ jobs:
 
       - name: Commit version change to master
         run: |
-          git push
-#          git push --follow-tags
+          git push --follow-tags
 
   new-release:
     runs-on: ubuntu-latest
@@ -109,13 +108,16 @@ jobs:
 #          token: ${{ secrets.GITHUB_TOKEN }}
 #          tag: ${{ github.ref }}
 
-      - name: Create GitHub release
-        uses: "marvinpinto/action-automatic-releases@latest"
-        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Run latest-tag
+        uses: EndBug/latest-tag@latest
+
+#      - name: Create GitHub release
+#        uses: "marvinpinto/action-automatic-releases@latest"
+#        with:
+#          repo_token: "${{ secrets.GITHUB_TOKEN }}"
 #          tag_name: ${{ github.ref }}
 #          automatic_release_tag: "latest"
-          prerelease: false
+#          prerelease: false
 
 #      - name: Generate base.pot
 #        run: pybabel extract -o locale/base.pot pidroidbot_discord/
