--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -107,6 +107,8 @@ jobs:
 #        with:
 #          token: ${{ secrets.GITHUB_TOKEN }}
 #          tag: ${{ github.ref }}
+      - name: checkout
+        uses: actions/checkout@v2-
 
       - name: Run latest-tag
         uses: EndBug/latest-tag@latest
