--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -108,7 +108,7 @@ jobs:
 #          token: ${{ secrets.GITHUB_TOKEN }}
 #          tag: ${{ github.ref }}
       - name: checkout
-        uses: actions/checkout@v2-
+        uses: actions/checkout@v2
 
       - name: Run latest-tag
         uses: EndBug/latest-tag@latest
