--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -91,27 +91,29 @@ jobs:
       - name: Commit version change to master
         run: |
           git push --follow-tags
+          git fetch --tags origin
+          gh release create "$(git describe)"
 
-  new-release:
-    runs-on: ubuntu-latest
-    if: "!startsWith(github.event.head_commit.message, '[SKIP]')"
-    name: New Release
-    defaults:
-      run:
-        working-directory: "${{ github.repository }}"
-    needs:
-      - build
-    steps:
-#      - name: Create GitHub release
-#        uses: ncipollo/release-action@v1
-#        with:
-#          token: ${{ secrets.GITHUB_TOKEN }}
-#          tag: ${{ github.ref }}
-      - name: checkout
-        uses: actions/checkout@v2
-
-      - name: Run latest-tag
-        uses: EndBug/latest-tag@latest
+#  new-release:
+#    runs-on: ubuntu-latest
+#    if: "!startsWith(github.event.head_commit.message, '[SKIP]')"
+#    name: New Release
+#    defaults:
+#      run:
+#        working-directory: "${{ github.repository }}"
+#    needs:
+#      - build
+#    steps:
+##      - name: Create GitHub release
+##        uses: ncipollo/release-action@v1
+##        with:
+##          token: ${{ secrets.GITHUB_TOKEN }}
+##          tag: ${{ github.ref }}
+#      - name: checkout
+#        uses: actions/checkout@v2
+#
+#      - name: Run latest-tag
+#        uses: EndBug/latest-tag@latest
 
 #      - name: Create GitHub release
 #        uses: "marvinpinto/action-automatic-releases@latest"
