--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -93,7 +93,7 @@ jobs:
           git push --follow-tags
           git fetch --tags origin
           echo "AUTH"
-          gh auth login --with-token ${{ secrets.GITHUB_TOKEN }}
+#          gh auth login --with-token < ${{ secrets.GITHUB_TOKEN }}
           echo "RELEASE"
           gh release create "$(git describe)"
 
