--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -92,10 +92,12 @@ jobs:
         run: |
           git push --follow-tags
           git fetch --tags origin
-          echo "AUTH"
-#          gh auth login --with-token < ${{ secrets.GITHUB_TOKEN }}
           echo "RELEASE"
           gh release create "$(git describe)"
+
+
+#          echo "AUTH"
+#          gh auth login --with-token < ${{ secrets.GITHUB_TOKEN }}
 
 #  new-release:
 #    runs-on: ubuntu-latest
