--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -92,6 +92,8 @@ jobs:
         run: |
           git push --follow-tags
           git fetch --tags origin
+          echo "AUTH"
+          gh auth login
           echo "RELEASE"
           gh release create "$(git describe)"
 
