--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -19,6 +19,10 @@ replace = __version__ = '{new_version}'
 search = v{current_version}
 replace = v{new_version}
 
+[bumpversion:file:README.md]
+search = ##version##
+replace = v{new_version}
+
 [bumpversion:file:docs/CHANGELOG.rst]
 search = 
 	Changelog
