--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -38,8 +38,14 @@ jobs:
           pip install bump2version setuptools wheel
           pip install Babel
 
-#      - name: Check changelog
-#        run: python tools/check_changelog.py
+      - name: Check changelog
+        run: python tools/check_changelog.py
+
+      - name: Generate base.pot
+        run: pybabel extract -o locale/base.pot pidroidbot_discord/
+
+      - name: Upadate catalogs
+        run: pybabel update -i locale/base.pot -d locale
 
       - name: Compile i18n catalogs
         run: pybabel compile -d locale
@@ -54,13 +60,10 @@ jobs:
       - name: Update Readme
         run: |
           # i18n Coverage
-          echo "![i18n Coverage](https://img.shields.io/badge/i18n%20Coverage-${{ steps.i18nCoverage.outputs.coverage }}%25-green)" > docs/README_BADGE_I18NCOVERAGE.md
+          echo "![i18n Coverage](https://img.shields.io/badge/i18n%20Coverage-${{ steps.i18nCoverage.outputs.coverage }}%25-green)" > docs/README_1_BADGE_I18NCOVERAGE.md
 
-          # concat into one file
-          # echo > README.md
-
+          # concat into one file (alphanum order)
           ls -v docs/README_*.md | xargs cat > README.md
-          # cat docs/README_{0..20}_*.md >> README.md
 
           # add all modify files
           git add .
@@ -98,105 +101,3 @@ jobs:
           echo "RELEASE"
           tag="$(git describe)"
           gh release create "$tag" -t "Release $tag" -F "docs/CHANGELOG.rst"
-
-
-#          echo "AUTH"
-#          gh auth login --with-token < ${{ secrets.GITHUB_TOKEN }}
-
-#  new-release:
-#    runs-on: ubuntu-latest
-#    if: "!startsWith(github.event.head_commit.message, '[SKIP]')"
-#    name: New Release
-#    defaults:
-#      run:
-#        working-directory: "${{ github.repository }}"
-#    needs:
-#      - build
-#    steps:
-##      - name: Create GitHub release
-##        uses: ncipollo/release-action@v1
-##        with:
-##          token: ${{ secrets.GITHUB_TOKEN }}
-##          tag: ${{ github.ref }}
-#      - name: checkout
-#        uses: actions/checkout@v2
-#
-#      - name: Run latest-tag
-#        uses: EndBug/latest-tag@latest
-
-#      - name: Create GitHub release
-#        uses: "marvinpinto/action-automatic-releases@latest"
-#        with:
-#          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-#          tag_name: ${{ github.ref }}
-#          automatic_release_tag: "latest"
-#          prerelease: false
-
-#      - name: Generate base.pot
-#        run: pybabel extract -o locale/base.pot pidroidbot_discord/
-#
-##      for each new lang
-##      pybabel init -l en_US -i locale/base.pot -d locale
-#
-#      - name: Upadate catalogs
-#        run: pybabel update -i locale/base.pot -d locale
-
-#      - name: Compile catalogs
-#        run: pybabel compile -d locale
-#
-#      - name: Push upgrades
-#        uses: JamesIves/github-pages-deploy-action@releases/v3
-#        with:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#          BRANCH: internationalization
-#          FOLDER: "."
-##          FOLDER: docs/build/html
-
-
-
-
-#pybabel init -l fr_FR en_US -i locale/base.pot -d locale
-#pybabel update -i locale/base.pot -d locale
-#pybabel compile -d locale
-
-#          for l in locale/*/ ; do
-#            echo "--- Locale : $l ---"
-#            # pybabel init -l en_US -i locale/base.pot -d locale
-#            pybabel update -d locale -l "$l" -i locale/base.pot -D "base"
-#            pybabel compile -d locale -l "$l" -D "base"
-#          done
-
-#          for f in locale/**/LC_MESSAGES/*.po ; do
-#            pybabel update -i locale/base.pot -o "$f"
-#            pybabel compile -i "$f" -o "${f%.*}.mo"
-#          done
-
-#            msgmerge --update "$f" locale/base.pot
-#            msgfmt -o "${f_po%.*}.mo" "${f}"
-
-#    - name: Install dependencies
-#      run: |
-#        python -m pip install --upgrade pip
-#        pip install pygettext
-
-#    - name: Install GNU gettext
-#      run: sudo apt-get install gettext
-#
-#
-#
-#    - name: CCheck i18n format
-#      run: |
-#        for i in pidroidbot_discord/locale/**/*.po ; do
-#          echo "checking $i..."
-#          msgfmt -v -c -o /dev/null $i
-#        done
-#
-#    - name: Check i18n coverage
-#      id: i18nCoverage
-#      uses: alexkiro/i18n-coverage@v1.0.0
-#      with:
-#        token: ${{ secrets.GITHUB_TOKEN }}
-#        translations-path: 'pidroidbot_discord/locale/**/*.po'
-#
-#    - name: Get the coverage
-#      run: echo "The coverage was ${{ steps.i18nCoverage.outputs.coverage }}"
