--- a/.github/workflows/do-readme.yml
+++ b/.github/workflows/do-readme.yml
@@ -14,6 +14,11 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
 
+      - name: Setup Git
+        run: |
+          git config user.name " PiDroid-B Action New release"
+          git config user.email 'pidroid-b@users.noreply.github.com'
+
       - name: Check i18n coverage
         id: i18nCoverage
         uses: alexkiro/i18n-coverage@v1.0.0
