--- a/.github/workflows/do-readme.yml
+++ b/.github/workflows/do-readme.yml
@@ -19,6 +19,7 @@ jobs:
           git config user.name " PiDroid-B Action New release"
           git config user.email 'pidroid-b@users.noreply.github.com'
           git checkout "${GITHUB_REF:11}"
+          git pull
 
       - name: Check i18n coverage
         id: i18nCoverage
