--- a/.github/workflows/do-pr.yml
+++ b/.github/workflows/do-pr.yml
@@ -24,3 +24,16 @@ jobs:
 
       - name: Check changelog
         run: python tools/check_changelog.py
+
+  i18nCoverage:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Check i18n coverage
+        id: i18nCoverage
+        uses: alexkiro/i18n-coverage@v1.0.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          translations-path: 'locale/**/LC_MESSAGES/*.po'
