--- a/.github/workflows/do-readme.yml
+++ b/.github/workflows/do-readme.yml
@@ -18,8 +18,8 @@ jobs:
         run: |
           git config user.name " PiDroid-B Action New release"
           git config user.email 'pidroid-b@users.noreply.github.com'
+          git remote set-url origin https://x-access-token:${{ secrets.AC_GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
           git checkout "${GITHUB_REF:11}"
-          git pull
 
       - name: Check i18n coverage
         id: i18nCoverage
@@ -30,8 +30,6 @@ jobs:
 
       - name: Update Readme
         run: |
-          git pull
-
           # i18n Coverage
           echo "![i18n Coverage](https://img.shields.io/badge/i18n%20Coverage-${{ steps.i18nCoverage.outputs.coverage }}%25-green)" > docs/README_1_BADGE_I18NCOVERAGE.md
 
