--- a/.github/workflows/do-readme.yml
+++ b/.github/workflows/do-readme.yml
@@ -37,7 +37,7 @@ jobs:
           ls -v docs/README_*.md | xargs cat > README.md
 
           # add all modify files
-          git add .
-          git commit --amend --no-edit
+          git add README.md && git commit -m 'Updated README.md' && echo "push=true" >> $GITHUB_ENV || echo "No changes to README.md"
+#          git commit --amend --no-edit
           git push
 
