--- a/.github/workflows/do-readme.yml
+++ b/.github/workflows/do-readme.yml
@@ -38,7 +38,8 @@ jobs:
 
           # add all modify files
           git add README.md && \
-          git commit --amend --no-edit && \
+          git commit -m 'Updated README.md' && \
+
           echo "push=true" >> $GITHUB_ENV || echo "No changes to README.md"
 
       - name: Push changes
