--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -19,13 +19,13 @@ replace = __version__ = '{new_version}'
 search = ##version##
 replace = v{new_version}
 
-[bumpversion:file:docs/CHANGELOG.rst]
+[bumpversion:file:CHANGELOG.md]
 search = 
-	Changelog
-	=========
+    # Changelog
+
 replace = 
-	Changelog
-	=========
-	
-	v{new_version} ({now:%Y-%m-%d})
-	------------------------------------------------------------
+	# Changelog
+
+    ------------------------------------------------------------
+	## v{new_version} ({now:%Y-%m-%d})
+
