--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -15,21 +15,17 @@ tag_message =
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
-[bumpversion:file:README.rst]
-search = v{current_version}
-replace = v{new_version}
-
 [bumpversion:file:README.md]
 search = ##version##
 replace = v{new_version}
 
-[bumpversion:file:docs/CHANGELOG.rst]
+[bumpversion:file:CHANGELOG.md]
 search = 
-	Changelog
-	=========
+    # Changelog
+
 replace = 
-	Changelog
-	=========
-	
-	v{new_version} ({now:%Y-%m-%d})
-	------------------------------------------------------------
+	# Changelog
+
+    ------------------------------------------------------------
+	## v{new_version} ({now:%Y-%m-%d})
+
