--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -19,11 +19,13 @@ replace = __version__ = '{new_version}'
 search = ##version##
 replace = v{new_version}
 
-[bumpversion:file:CHANGELOG.md]
-search = 
-	# Changelog
+[bumpversion:file:CHANGELOG.rst]
+search =
+	Changelog
+	=========
 replace =
-	# Changelog
+	Changelog
+	=========
 
+	v{new_version} ({now:%Y-%m-%d})
 	------------------------------------------------------------
-	## v{new_version} ({now:%Y-%m-%d})
