--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -19,13 +19,14 @@ replace = __version__ = '{new_version}'
 search = ##version##
 replace = v{new_version}
 
-[bumpversion:file:CHANGELOG.rst]
+[bumpversion:file:CHANGELOG.md]
 search =
-	Changelog
-	=========
-replace =
-	Changelog
-	=========
+	# Changelog
 
-	v{new_version} ({now:%Y-%m-%d})
+replace =
+	# Changelog
+
 	------------------------------------------------------------
+	v{new_version} ({now:%Y-%m-%d})
+
+
