--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -21,10 +21,9 @@ replace = v{new_version}
 
 [bumpversion:file:CHANGELOG.md]
 search =
-	# Changelog
-
+        {#} Changelog
 replace =
-	# Changelog
+        {#} Changelog
 
-	------------------------------------------------------------
-	## v{new_version} ({now:%Y-%m-%d})
+        ------------------------------------------------------------
+        {#}{#} [v{new_version}](https://github.com/PiDroid-B/pidroidbot-discord/releases/tag/v{new_version}) ({now:%Y-%m-%d})
