--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -97,4 +97,5 @@ jobs:
           echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
           echo "RELEASE"
           tag="$(git describe)"
-          gh release create "$tag" -t "Release $tag" -F "docs/CHANGELOG.rst"
+          gh release create "$tag" -t "Release $tag"
+          # -F "docs/CHANGELOG.rst"
