--- a/.github/workflows/do-pr.yml
+++ b/.github/workflows/do-pr.yml
@@ -54,6 +54,11 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
+      - uses: venkatsarvesh/pr-tasks-completed-action@v1.0.0
+        with:
+          repo-token: "${{ secrets.GITHUB_TOKEN }}"
+
+
       - name: Generate link
         uses: mshick/add-pr-comment@v1
         with:
