[FEATURE] toto (#17) (title pull request)
* Comment of pull request

Co-authored-by: PiDroid-B <pidroid-b@users.noreply.github.com>

--- a/.github/workflows/do-pr.yml
+++ b/.github/workflows/do-pr.yml
@@ -5,9 +5,13 @@ on:
   pull_request:
     branches:
       - main
+#  push:
+#    branches-ignore:
+#      - main
 
 jobs:
   Changelog:
+    name: Check Changelog
     runs-on: ubuntu-latest
 
     steps:
@@ -26,6 +30,7 @@ jobs:
         run: python tools/check_changelog.py
 
   i18nCoverage:
+    name: Check i18n Coverage
     runs-on: ubuntu-latest
 
     steps:
