--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -54,6 +54,11 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           translations-path: 'locale/**/LC_MESSAGES/*.po'
 
+      - name: changelog
+        uses: heinrichreimer/github-changelog-generator-action@v2.1.1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Update Readme
         run: |
           # i18n Coverage
