new changelog system

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -19,11 +19,11 @@ replace = __version__ = '{new_version}'
 search = ##version##
 replace = v{new_version}
 
-[bumpversion:file:CHANGELOG.md]
-search = 
-	{#} Changelog
-replace = 
-	{#} Changelog
-	
-	------------------------------------------------------------
-	{#}{#} [v{new_version}](https://github.com/PiDroid-B/pidroidbot-discord/releases/tag/v{new_version}) ({now:%Y-%m-%d})
+; [bumpversion:file:CHANGELOG.md]
+; search =
+; 	{#} Changelog
+; replace =
+; 	{#} Changelog
+;
+; 	------------------------------------------------------------
+; 	{#}{#} [v{new_version}](https://github.com/PiDroid-B/pidroidbot-discord/releases/tag/v{new_version}) ({now:%Y-%m-%d})
