--- a/.github/workflows/do-pr.yml
+++ b/.github/workflows/do-pr.yml
@@ -10,24 +10,24 @@ on:
 #      - main
 
 jobs:
-  Changelog:
-    name: Check Changelog
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up Python 3
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-
-      - name: Check changelog
-        run: python tools/check_changelog.py
+#  Changelog:
+#    name: Check Changelog
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - uses: actions/checkout@v2
+#
+#      - name: Set up Python 3
+#        uses: actions/setup-python@v2
+#        with:
+#          python-version: '3.x'
+#
+#      - name: Install dependencies
+#        run: |
+#          python -m pip install --upgrade pip
+#
+#      - name: Check changelog
+#        run: python tools/check_changelog.py
 
   i18nCoverage:
     name: Check i18n Coverage
