--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -18,3 +18,12 @@ replace = __version__ = '{new_version}'
 [bumpversion:file:README.md]
 search = ##version##
 replace = v{new_version}
+
+; [bumpversion:file:CHANGELOG.md]
+; search =
+; 	{#} Changelog
+; replace =
+; 	{#} Changelog
+;
+; 	------------------------------------------------------------
+; 	{#}{#} [v{new_version}](https://github.com/PiDroid-B/pidroidbot-discord/releases/tag/v{new_version}) ({now:%Y-%m-%d})
