--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -98,13 +98,15 @@ jobs:
         run: |
           sudo apt-get install ruby-full
           sudo gem install github_changelog_generator
-          github_changelog_generator
+          new_version=$(awk '/^current_version/{print $3}' .bumpversion.cfg)
+          github_changelog_generator --future-release "v${new_version}"
           git add .
-          git commit --amend --no-edit
+          git commit -m "[SKIP] version bump {new_version}"
+          git push "v${new_version}"
 
       - name: Commit version change to master
         run: |
-          git push --follow-tags
+          # git push --follow-tags
           git fetch --tags origin
           echo "AUTH"
           echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
