--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -102,14 +102,17 @@ jobs:
           github_changelog_generator --future-release "v${new_version}"
           git add .
           git commit -m "[SKIP] version bump {new_version}"
-          git tag "v${new_version}"
+
+          # git tag "v${new_version}"
 
       - name: Commit version change to master
         run: |
-          git push --follow-tags
-          git fetch --tags origin
+          # git push --follow-tags
+          git push
+          # git fetch --tags origin
           echo "AUTH"
           echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
           echo "RELEASE"
-          tag="$(git describe)"
+          # tag="$(git describe)"
+          tag="v$(awk '/^current_version/{print $3}' .bumpversion.cfg)"
           gh release create "$tag" -t "Release $tag"
