--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -25,8 +25,6 @@ jobs:
         run: |
           git config user.name " PiDroid-B Action New release"
           git config user.email 'pidroid-b@users.noreply.github.com'
-#          git remote set-url origin https://x-access-token:${{ secrets.AC_GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
-#          git checkout "${GITHUB_REF:11}"
 
       - name: Setup env variables
         run: |
@@ -37,6 +35,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install bump2version setuptools wheel
           pip install Babel
+
+      - name: Push Version to Env
+        run: |
+          echo "OLD_VERSION=v$(awk '/^current_version/{print $3}' .bumpversion.cfg)" >> $GITHUB_ENV
 
       - name: Generate base.pot
         run: pybabel extract -o locale/base.pot pidroidbot_discord/
@@ -53,11 +55,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           translations-path: 'locale/**/LC_MESSAGES/*.po'
-
-#      - name: changelog
-#        uses: heinrichreimer/github-changelog-generator-action@v2.1.1
-#        with:
-#          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Update Readme
         run: |
@@ -102,14 +99,13 @@ jobs:
         run: |
           sudo apt-get install ruby-full
           sudo gem install github_changelog_generator
+          github_changelog_generator --future-release "${{ env.NEW_VERSION }}" --since-tag "${{ env.OLD_VERSION }}" -o docs/CHANGELOG.md
           github_changelog_generator --future-release "${{ env.NEW_VERSION }}"
           git add .
-          git commit -m "[SKIP] version bump ${{ env.NEW_VERSION }}"
+          git commit -m "[SKIP] version bump ${{ env.OLD_VERSION }} -> ${{ env.NEW_VERSION }}"
 
       - name: Commit version change to master
         run: |
           git push
-          echo "AUTH"
           echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
-          echo "RELEASE"
-          gh release create "${{ env.NEW_VERSION }}" -t "Release ${{ env.NEW_VERSION }}"
+          gh release create "${{ env.NEW_VERSION }}" -t "Release ${{ env.NEW_VERSION }}" -F docs/CHANGELOG.md
