cleaning + fix major

--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -71,7 +71,7 @@ jobs:
         env:
           COMMIT_MSG: ${{ github.event.head_commit.message }}
         run: |
-          bump2version minor --allow-dirty
+          bump2version major --allow-dirty
           echo "SKIPBUMP=TRUE" >> $GITHUB_ENV
         if: "startsWith(github.event.head_commit.message, '[MAJOR]')"
 
