--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,6 +5,10 @@ current_version = 0.0.1
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
+[bumpversion:file:lib/setup.py]
+search = version='{current_version}',
+replace = version='{new_version}',
+
 [bumpversion:file:README.md]
 search = ##version##
 replace = v{new_version}
