--- a/.github/workflows/do-release.yml
+++ b/.github/workflows/do-release.yml
@@ -62,21 +62,21 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           translations-path: 'locales/**/LC_MESSAGES/*.po'
 
-      - name: Check i18n coverage Documentation
-        id: i18nCoverageDoc
-        uses: alexkiro/i18n-coverage@v1.0.1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          translations-path: 'docs/locales/**/LC_MESSAGES/*.po'
+#      - name: Check i18n coverage Documentation
+#        id: i18nCoverageDoc
+#        uses: alexkiro/i18n-coverage@v1.0.1
+#        with:
+#          token: ${{ secrets.GITHUB_TOKEN }}
+#          translations-path: 'docs/locales/**/LC_MESSAGES/*.po'
 
       - name: Update Readme
         run: |
           # i18n Coverage
           SRC="$(printf "%.1f" "${{ steps.i18nCoverageSrc.outputs.coverage }}")"
-          DOC="$(printf "%.1f" "${{ steps.i18nCoverageDoc.outputs.coverage }}")"
+          # DOC="$(printf "%.1f" "${{ steps.i18nCoverageDoc.outputs.coverage }}")"
 
           echo "![i18n Coverage](https://img.shields.io/badge/i18n%20Coverage-${SRC}%25-green)" > docs/README_1_BADGE_I18NCOVERAGE.md
-          echo "![i18n Coverage Docs](https://img.shields.io/badge/i18n%20Coverage%20Docs-${DOC}%25-green)" > docs/README_5_BADGE_I18NCOVERAGEDOCS.md
+          # echo "![i18n Coverage Docs](https://img.shields.io/badge/i18n%20Coverage%20Docs-${DOC}%25-green)" > docs/README_5_BADGE_I18NCOVERAGEDOCS.md
 
           # concat into one file (alphanum order)
           ls -v docs/README_*.md | xargs cat > README.md
