Test CI BuildDocs (#34)
* Test CI

Co-authored-by: PiDroid-B <pidroid-b@users.noreply.github.com>

--- a/.github/workflows/do-pr.yml
+++ b/.github/workflows/do-pr.yml
@@ -19,4 +19,11 @@ jobs:
         uses: alexkiro/i18n-coverage@v1.0.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          translations-path: 'locale/**/LC_MESSAGES/*.po'
+          translations-path: 'locales/**/LC_MESSAGES/*.po'
+
+      - name: Check i18n coverage Documentation
+        id: i18nCoverageDoc
+        uses: alexkiro/i18n-coverage@v1.0.1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          translations-path: 'docs/locales/**/LC_MESSAGES/*.po'
