--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,8 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+settings/*
+build/*
+
+# keep all folders contains .gitkeep (must be at the end of gitignore)
+!/**/.gitkeep
