test ci 10 on main

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -6,8 +6,8 @@ search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
 [bumpversion:file:docs/source/conf.py]
-search = release = 'v{current_version}',
-replace = release = 'v{new_version}',
+search = release = "v{current_version}",
+replace = release = "v{new_version}",
 
 [bumpversion:file:README.md]
 search = ##version##
